--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                     <div class="outside">
                       <p><span id="slider-prev"></span> <span id="slider-next"></span></p>
                     </div>
-                    <a href="">Continue Reading</a>
+                    <a href="news.html">Continue Reading</a>
                </div>
            </div>
        </div>
