--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">STROM & GAS</a></li>
+                    <li class="active"><a href="#">STROM </a></li>
+                    <li><a href="#">GAS</a></li> 
                     <li><a href="#">VERSICHERUNGEN  </a></li>
-                    <li><a href="#">VORSORGE</a></li> 
-                    <li><a href="#">FINANZEN </a></li> 
-                    <li><a href="#">NFORMATIONEN</a></li> 
+                    <li><a href="#">FRAGEN UND ANTWORTEN </a></li> 
                   </ul>
                 </div>
               </div>
@@ -286,7 +285,7 @@
                    <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
                    <form action="">
                       <div class="bottom-form-group">
-                       <input type="text" placeholder="ihre PLZ">
+                        <input type="text" placeholder="ihre PLZ">
                       </div>
                        <div class="bottom-form-group">
                         <select>
@@ -417,4 +416,3 @@
    <script src="js/main.js"></script>
 </body>
 </html>
-
