--- a/index.html
+++ b/index.html
@@ -49,35 +49,50 @@
                   <ul class="nav navbar-nav">
                     <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
-                            <li role="presentation"><a href="#" role="menuitem">Grones</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Nach</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Zpu</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Madnass</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Berlin</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Hamburg</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom München</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Köln</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Frankfurt</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Stuttgart</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Strom Dortmund</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>
                     </li>
                     <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
-                            <li role="presentation"><a href="#" role="menuitem">Grones</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Nach</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Zpu</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Madnass</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Hamburg</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas München</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Köln</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Frankfurt</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Stuttgart</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Dortmund</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Gas Essen</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>
                     </li>
                     <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
-                            <li role="presentation"><a href="#" role="menuitem">Grones</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Nach</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Zpu</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Madnass</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Rechtsschutzversicherung</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Privathaftpflichtversicherung</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Tierhalterhaftpflichtversicherung</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Haus- und Grundbesitzerhaftpflicht</a></li>
+                            <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN <b class="caret"></b></a>
-                        <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
-                            <li role="presentation"><a href="#" role="menuitem">Grones</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Nach</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Zpu</a></li>
-                            <li role="presentation"><a href="#" role="menuitem">Madnass</a></li>
-                        </ul>
+                    <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
+                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
+                            <li role="presentation"><a href="#" role="menuitem"></a></li>
+                            <li role="presentation"><a href="#" role="menuitem"></a></li>
+                            <li role="presentation"><a href="#" role="menuitem"></a></li>
+                            <li role="presentation"><a href="#" role="menuitem"></a></li>
+                        </ul>-->
                     </li>
                   </ul>
                 </div>
@@ -99,7 +114,7 @@
                 <li><a data-toggle="tab" href="#menu1">Gasvergleich</a></li>
                 <li><a data-toggle="tab" href="#menu2">KFZ Versicherung </a></li>
                 <li><a data-toggle="tab" href="#menu3">Krankenversicherung</a></li>
-                <li><a data-toggle="tab" href="#menu3">Privathaftpflicht</a></li>
+                <li><a data-toggle="tab" href="#menu4">Privathaftpflicht</a></li>
             </ul>
             <div class="tab-content">
                 <div id="home" class="tab-pane fade in active">
@@ -136,9 +151,7 @@
                               <div class="col-sm-8">          
                                 <select>
                                     <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
+                                    <option>alle, inkl. Vorkasse</option>
                                 </select>
                               </div>
                             </div>
@@ -158,13 +171,13 @@
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Verbrauch:</label>
+                              <label class="control-label col-sm-4" for="pwd">Wohnungsgröße :</label>
                               <div class="col-sm-8">          
-                                <select>
-                                    <option>2000 Kwh</option>
-                                    <option>3000 Kwh</option>
-                                    <option>4000 Kwh</option>
-                                    <option>5000 Kwh</option>
+                                <select name="dropdown2" id="dropdown2">
+                                   <option value="18000">50 m2</option>
+                                    <option value="12000">100 m2</option>
+                                    <option value="18000">150 m2</option>
+                                    <option value="35000">280 m2</option>
                                 </select>
                               </div>
                             </div>
@@ -173,15 +186,10 @@
                             <div class="form-group">
                               <label class="control-label col-sm-5" for="email">Personen im Haushalt:</label>
                               <div class="col-sm-7">
-                                <select>
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                </select>
+                               <input type="text" name="receiver2" id="receiver2" value="" placeholder="2000" />
                               </div>
                             </div>
-                            <div class="form-group">
+                            <!--<div class="form-group">
                               <label class="control-label col-sm-4" for="pwd">Zahlungsweise:</label>
                               <div class="col-sm-8">          
                                 <select>
@@ -191,7 +199,7 @@
                                     <option>Monatlich</option>
                                 </select>
                               </div>
-                            </div>
+                            </div>-->
                         </div>
                         </div>
                         <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
@@ -200,49 +208,20 @@
                 <div id="menu2" class="tab-pane fade">
                     <form class="form-horizontal">
                       <div class="row">
-                       <div class="col-md-6">
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
-                              <div class="col-sm-8">
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
-                              </div>
+                          <div class="col-md-3"></div>
+                            <div class="col-md-6">
+                                <div class="heading"> 
+                                <h3>Bis zu 850 € sparen!</h3>
+                                <p>Ganz einfach vergleichen und sparen!</p>
+                                </div>
+                                <div class="form-group">
+                                  <label class="control-label col-sm-4" for="pwd">TA 247 : </label>
+                                  <div class="col-sm-8">          
+                                    <input type="text" value="" placeholder="" />
+                                  </div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Verbrauch:</label>
-                              <div class="col-sm-8">          
-                                <select>
-                                    <option>2000 Kwh</option>
-                                    <option>3000 Kwh</option>
-                                    <option>4000 Kwh</option>
-                                    <option>5000 Kwh</option>
-                                </select>
-                              </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                              <label class="control-label col-sm-5" for="email">Personen im Haushalt:</label>
-                              <div class="col-sm-7">
-                                <select>
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                </select>
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Zahlungsweise:</label>
-                              <div class="col-sm-8">          
-                                <select>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                </select>
-                              </div>
-                            </div>
-                        </div>
+                          <div class="col-md-3"></div>
                         </div>
                         <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
@@ -250,49 +229,51 @@
                 <div id="menu3" class="tab-pane fade">
                     <form class="form-horizontal">
                       <div class="row">
-                       <div class="col-md-6">
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
-                              <div class="col-sm-8">
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
-                              </div>
-                            </div>
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Verbrauch:</label>
-                              <div class="col-sm-8">          
-                                <select>
-                                    <option>2000 Kwh</option>
-                                    <option>3000 Kwh</option>
-                                    <option>4000 Kwh</option>
-                                    <option>5000 Kwh</option>
+                          <div class="col-md-3"></div>
+                            <div class="col-md-6">
+                                <div class="heading"> 
+                                <h3>Bis zu 500 € sparen!</h3>
+                                <p>Ganz einfach vergleichen und sparen!</p>
+                                </div>
+                                <div class="form-group">
+                                  <label class="control-label col-sm-4" for="pwd">Beruf : </label>
+                                  <div class="col-sm-8">          
+                                    <select>
+                                   <option>Studentin</option>
+                                    <option>Angestellter</option>
+                                    <option>Selbstandiger</option>
+                                    <option>Beamter</option>
                                 </select>
-                              </div>
+                                  </div>
+                                </div>
                             </div>
+                          <div class="col-md-3"></div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                              <label class="control-label col-sm-5" for="email">Personen im Haushalt:</label>
-                              <div class="col-sm-7">
-                                <select>
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
+                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                      </form>
+                </div>
+                <div id="menu4" class="tab-pane fade">
+                    <form class="form-horizontal">
+                      <div class="row">
+                          <div class="col-md-3"></div>
+                            <div class="col-md-6">
+                                <div class="heading"> 
+                                <h3>Bis zu 80 % sparen!</h3>
+                                <p>Ganz einfach vergleichen und sparen!</p>
+                                </div>
+                                <div class="form-group">
+                                  <label class="control-label col-sm-4" for="pwd">Tarif : </label>
+                                  <div class="col-sm-8">          
+                                    <select>
+                                   <option>Familie/lebensgemeinschaft mit kinder</option>
+                                    <option>Familie/lebensgemeinschaft ohne kinder</option>
+                                    <option>Single ohne kinder</option>
+                                    <option>Single mit kinder</option>
                                 </select>
-                              </div>
+                                  </div>
+                                </div>
                             </div>
-                            <div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Zahlungsweise:</label>
-                              <div class="col-sm-8">          
-                                <select>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                </select>
-                              </div>
-                            </div>
-                        </div>
+                          <div class="col-md-3"></div>
                         </div>
                         <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
