--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="top">
          <div class="container">
           <div class="logo">
-              <img src="images/logo.png" alt="glindespart">
+              <a href="index.html"><img src="images/logo.png" alt="glindespart"></a>
           </div>
           <div class="phone">
               <h2>0800-32 32 124</h2>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                   <ul class="nav navbar-nav">
-                    <li class="active dropdown"><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
+                    <li class="active dropdown"><a href="strom.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">STROM <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Stromvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Ökostromvergleich</a></li>
@@ -61,7 +61,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="gas.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
@@ -75,7 +75,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
+                    <li class="dropdown "><a href="versicherungen.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">VERSICHERUNGEN <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Private Kfz-Versicherung</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Motorrad-Versicherung</a></li>
@@ -86,13 +86,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Öltankversicherung</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="#" id="drop1" data-toggle="dropdown" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
-                        <!--<ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
-                            <li role="presentation"><a href="#" role="menuitem"></a></li>
-                            <li role="presentation"><a href="#" role="menuitem"></a></li>
-                            <li role="presentation"><a href="#" role="menuitem"></a></li>
-                            <li role="presentation"><a href="#" role="menuitem"></a></li>
-                        </ul>-->
+                    <li class="dropdown "><a href="fragenundantworten.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">FRAGEN UND ANTWORTEN</a>
                     </li>
                   </ul>
                 </div>
@@ -213,12 +207,9 @@
                                 <div class="heading"> 
                                 <h3>Bis zu 850 € sparen!</h3>
                                 <p>Ganz einfach vergleichen und sparen!</p>
+                                <div class="insuranceform">
+                                    <input type="text">
                                 </div>
-                                <div class="form-group">
-                                  <label class="control-label col-sm-4" for="pwd">TA 247 : </label>
-                                  <div class="col-sm-8">          
-                                    <input type="text" value="" placeholder="" />
-                                  </div>
                                 </div>
                             </div>
                           <div class="col-md-3"></div>
