--- a/strom.html
+++ b/strom.html
@@ -150,56 +150,16 @@
            </ul>   
           </div>
         <div class="col-md-8 news">
-            <ul class="news-list">
-                <li>
-                    <a href=""><h3>Atomausstieg: Energieversorger sollen allein für Kosten aufkommen</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Strompreis-Erhöhungen in Berlin und Hamburg: Stromanbieter Vattenfall zieht die Preise an</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Gasanbieter dürfen Gaspreis-Erhöhungen nicht beliebig weitergeben</h3></a>
-                    <p>Bis zum Jahr 2022 will Deutschland die letzten Atomkraftwerke vom Netz nehmen und endgültig aus der Kernkraft aussteigen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromanbieter Vattenfall verzeichnet Milliardenverlust wegen Kohle- und Kernkraft</h3></a>
-                    <p>Der schwedische Stromversorger Vattenfall hat mehr denn je mit der Energiewende zu kämpfen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromkosten: Zusammensetzung der Netzentgelte soll transparenter werden</h3></a>
-                    <p>Die EEG-Umlage hat in den vergangenen Jahren erheblich zu einem Anwachsen der Strompreise beigetragen, weshalb ihr Einsatz zunehmend kritisch betrachtet wird.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Ökostrom: „Grüner Strom Label“-Zertifizierung unterliegt strengeren Kriterien</h3></a>
-                    <p>Immer mehr Stromanbieter kommen dem wachsenden Wunsch vieler Stromverbraucher entgegen und bieten regenerativ erzeugten Strom aus erneuerbaren Energien an.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Fracking: USA sind größter Erdöl-Produzent und exportieren wieder im großen Stil</h3></a>
-                    <p>Die umstrittene Schiefergas- und Ölförderung durch Fracking hat den USA zu neuer Größe verholfen.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Stromanbieter: Ein Drittel der Verbraucher plant Wechsel des Stromversorgers</h3></a>
-                    <p>Zum Jahreswechsel 2016 haben viele Stromanbieter die Strompreise für ihre Kunden erhöht.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Gaspreis-Erhöhungen: Bei Preisanpassungen Sonderkündigungsrecht nutzen</h3></a>
-                    <p>Nicht nur die Ostküste der USA wurde an diesem Wochenende von einem heftigen Wintereinbruch heimgesucht.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Strompreise: Höhe von Abgaben und Umlagen auf Rekordniveau angestiegen</h3></a>
-                    <p>Die Einkaufspreise für Strom an der Börse sind in den vergangenen Jahren stark gefallen.</p>
-                </li><!--
-                <li>
-                    <a href=""><h3>Gasförderung durch Fracking: BGR-Entwarnung sorgt für Kritik</h3></a>
-                    <p>Die unkonventionelle Gasfördermethode Fracking ist in Deutschland höchst umstritten.</p>
-                </li>
-                <li>
-                    <a href=""><h3>Kohleausstieg bis 2050: Energieminister Gabriel will keinen „Masterplan“</h3></a>
-                    <p>Bundeswirtschafts- und Energieminister Sigmar Gabriel (SPD) betonte auf der vom Handelsblatt organisierten Jahrestagung der Energiewirtschaft am Dienstag in Berlin, dass er einen Ausstieg aus der Kohleverstromung noch vor 2050 nicht für ausgeschlo... weiterlesen</p>
-                </li>-->
-            </ul>
+            <div class="details">
+                <h2>Energie</h2>
+                <h3>Viele Gasanbieter und Stromanbieter erhöhen in regelmäßigen Abständen ihre Preise.</h3>
+                <p>Grundversorger und Stadtwerke erheben oft sehr hohe Gas- und Strompreise, da sie durch diese Einnahmen andere Betriebe wie Hallenbäder oder kulturelle Einrichtungen mitfinanzieren. Viele Haushalte können oder wollen diese Extrakosten beim Strom und beim Gas aber nicht zahlen. Durch einen Strompreisvergleich und einen Gaspreisvergleich können sie ermitteln, welche Preise andere Unternehmen für Energie erheben, und welche Anbieter günstige Strom- und Gaspreise anbieten. Mit dem Vergleichsrechner auf Tarifo.de können sie ermitteln wie viel sie durch einen Wechsel zu einem alternativen Gas- oder Stromanbieter sparen können.</p>
+                <p>Nicht erst seit der Atomkatastrophe von Fukushima ist es vielen Verbrauchern wichtig anstatt konventionell erzeugten Strom Ökostrom zu beziehen. Ökostrom wird aus erneuerbaren Energien gewonnen. Er ist daher endlos verfügbar und schont die Umwelt. Dafür ist Ökostrom oft teurer als konventionell erzeugter Strom. Es gibt jedoch auch beim Ökostrom große Preisunterschiede zwischen verschiedenen Ökostromanbietern. Durch den Ökostrom-Preisvergleich auf Tarifo.de können sie herausfinden welcher Versorger günstigen Ökostrom in ihrer Region anbietet.</p>
+                <ul>
+                    <li><a href="">Zum Stromvergleich</a></li>
+                    <li><a href="">Zum Gasvergleich</a></li>
+                </ul>
+            </div>
         </div>
            
        </div>
