--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <!--Main File-->
     
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -61,7 +63,7 @@
                             <li role="presentation"><a href="#" role="menuitem">Weitere Städte</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown "><a href="gas.html" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
+                    <li class="dropdown "><a href="" id="drop1" data-toggle="" class="dropdown-toggle" role="button">GAS <b class="caret"></b></a>
                         <ul role="menu" class="dropdown-menu" aria-labelledby="drop1">
                             <li role="presentation"><a href="#" role="menuitem">Gasvergleich</a></li>
                             <li role="presentation"><a href="#" role="menuitem">Gas Berlin</a></li>
@@ -102,7 +104,7 @@
       </div>
    </header>
    <div class="banner">
-       <div class="form">
+       <div class="form animated flipInX">
            <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Stromvergleich</a></li>
                 <li><a data-toggle="tab" href="#menu1">Gasvergleich</a></li>
@@ -118,7 +120,7 @@
                             <div class="form-group">
                               <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
                               <div class="col-sm-8">
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                <input type="email" class="form-control" id="email" placeholder="">
                               </div>
                             </div>
                             <div class="form-group">
@@ -151,7 +153,7 @@
                             </div>
                         </div>
                         </div>
-                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="stromview.html" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
                 </div>
                 <div id="menu1" class="tab-pane fade">
