--- a/stromview.html
+++ b/stromview.html
@@ -143,8 +143,174 @@
                     <label class="control-label col-sm-4" for="pwd">Ihr aktueller:</label>
                     <div class="col-sm-8">          
                       <select>
-                          <option>Vattenfall Europe Sales Grr</option>
-                          <option>Vattenfall Europe Sales Grr</option>
+                          <option>Vattenfall Europe Sales GmbH</option>
+                          <option>123energie - Eine Marke der Pfalzwerke AG</option>
+                          <option>24/7 Energie und kommunikation GmbH</option>
+                          <option>Audax Energie Gmbh</option>
+                          <option>badenova AG & Co. KG</option>
+                          <option>BayWa okoenergie GmbH</option>
+                          <option>BayWa r.e. Green Energy Products GmbH</option>
+                          <option>BEV Bayerische Energieversorgungsgeselschaft mbh</option>
+                          <option>Bonus Strom Gmbh</option>
+                          <option>Braunschweiger Versorgungs- AG & Co. KG</option>
+                          <option>Burgerwerke eG</option>
+                          <option>Clean Energy Sourcing AG</option>
+                          <option>Dessauer Stromversorgung GmbH</option>
+                          <option>die energie vorsorger GmbH</option>
+                          <option>E WIE EINFACH GmbH</option>
+                          <option>e-werk Sachsenwald GmbH</option>
+                          <option>E.ON Energie Deutschland GmbH</option>
+                          <option>E.VITA GmbH</option>
+                          <option>EBLD Schweiz Strom GmbH</option>
+                          <option>Econsum GmbH</option>
+                          <option>Eins energie in sachsen GmbH & Co. KG</option>
+                          <option>Elogico-Eine Marke der ENSTROGA AG</option>
+                          <option>EMB Energie Baden-Wurttemberg AG</option>
+                          <option>ener.my GbH</option>
+                          <option>Energie Aktiengesellschaft Iserlohn</option>
+                          <option>Energie von nebenan - eine Marke der Stadtweke Herne AG</option>
+                          <option>Energie wie wir - eine Marke der swb Vertrieb Bremen GmbH</option>
+                          <option>Energie genossenschaft Rhein-Ruhr eG</option>
+                          <option>energie GUT GmH</option>
+                          <option>energiehoch3 GmbH</option>
+                          <option>Energieversorgung Beckum GmbH & Co.KG</option>
+                          <option>Energieversorgung Filstal GmbH & Co.KG</option>
+                          <option>Energieversorgung Greiz GmbH</option>
+                          <option>Energieversorgung Pirna GmbH</option>
+                          <option>energieversprechen.de - eine Marke der Stadtwerke Troisdorf</option>
+                          <option>Energrun - eine Marke der FIRSTCON GmbH</option>
+                          <option>enerSwitch - eine Marke der EWV Energie- und Wasser-Versorgung GmbH Stolberg</option>
+                          <option>enno energie GmbH</option>
+                          <option>enQu GmbH</option>
+                          <option>Enspire Energie - eine marke der stadtwerke konstanz gmbh</option>
+                          <option>enstroga ag</option>
+                          <option>entega energie gmbh</option>
+                          <option>envia mitteldeutsche energie ag</option>
+                          <option>envitra -eine marke der deg deutsche energie gmbh</option>
+                          <option>eprimo GmbH</option>
+                          <option>ESWE Versorgungs AG</option>
+                          <option>EVD Energieversorgung Deutschland Gmbh</option>
+                          <option>EVH Gmbh</option>
+                          <option>ewe vertreb gmbh</option>
+                          <option>extraenergie gmbh</option>
+                          <option>fair trade power deutschland gmbh</option>
+                          <option>fairenergie gmbh</option>
+                          <option>first utility gmbh</option>
+                          <option>fluxenergie - eine Marke der EGRR gmbh</option>
+                          <option>fohlenstrom - eine marke der new niederrhein energie und wasser gmbh</option>
+                          <option>fohrer Windkraft Gmbh & Co. KG</option>
+                          <option>friesenenergie gmbh</option>
+                          <option>funfwerkegmbh & co. KG</option>
+                          <option>fuxx-die sparenergie gmbh</option>
+                          <option>gas in gmbh</option>
+                          <option>gas-und warmedienst Bornsen gmbh</option>
+                          <option>gasag berliner gaswerke AG</option>
+                          <option>gemeindewerke Markt Lichtenau</option>
+                          <option>GENO Energie Gmbh</option>
+                          <option>GGEW Gruppen-Gas- und Elektrizitatswerk Bergstrabe AG</option>
+                          <option>goldgas gmbh</option>
+                          <option>greenline - alternative energien gmbh</option>
+                          <option>greenpeace energy eG</option>
+                          <option>grun.power gmbh</option>
+                          <option>gruner funke - eine marke der fuxx-die sparenergie gmbh</option>
+                          <option>grunwelt -eine marke der stromio gmbh</option>
+                          <option>Hamburg energie gbh</option>
+                          <option>hoyer strom und erdgas Gmbh </option>
+                          <option>idealenergie -eine marke der 365 AG</option>
+                          <option>Ideo Energie gmbh</option>
+                          <option>immergrun! energie - eine marke der 365 AG</option>
+                          <option>innogy SE</option>
+                          <option>Jura Power Gmbh & Co.KG</option>
+                          <option>Kiss me green - eine marke der e:veen energie eG</option>
+                          <option>Klick energie gmbh & co.kg</option>
+                          <option>Knauber strom -eine marke der knauber erdgas gmbh</option>
+                          <option>kreiswerke main-kinzig gmbh </option>
+                          <option>Kristal Enerji -eine Marke der Stadtwerke Pforzheim Gmbh & Co.KG</option>
+                          <option>Lechwerke AG</option>
+                          <option>lekker Energie Gmbh</option>
+                          <option>Lichtblick SE</option>
+                          <option>Logo energie gmbh</option>
+                          <option>LUDVIKK -eine Marke von Twl Energie  Deutschland gmbh</option>
+                          <option>Lunestrom - eine marke der firrstcon gmbh</option>
+                          <option>maingau energie gmbh</option>
+                          <option>mann naturenergie gmbh & co.kg</option>
+                          <option>mark-e aktiengesellschaft</option>
+                          <option>Montana energieversorgung gmbh & Co.KG</option>
+                          <option>N-ergie Aktiengesellschaft</option>
+                          <option>NaturEnergie + Deutschland gmbh</option>
+                          <option>naturlich grun - eine marke der hhlp-energy gmbh</option>
+                          <option>naturstromhandel gmbh</option>
+                          <option>naturwerke-eine marke der deg deutsche energie gmbh</option>
+                          <option>nekermann strom gmbh</option>
+                          <option>new niederrhein energie und wasser gmbh</option>
+                          <option>nord stadtwerke gmbh</option>
+                          <option>ovag energie AG</option>
+                          <option>polarstern gmbh</option>
+                          <option>primastrom gmbh</option>
+                          <option>priorstrom - eine marke der extraenergie gmbh</option>
+                          <option>prokon regenerative energien eG</option>
+                          <option>propan rheingas gmbh & co.KG</option>
+                          <option>r(h)einpower - eine marke der stadtwerke duisburg ag</option>
+                          <option>revierkraft-eine marke der energieversorgung oberhausen AG</option>
+                          <option>Rhonenergie fulda gmbh</option>
+                          <option>Rothstrom - eine marke der adolf roth gmbh & co. kg</option>
+                          <option>schwarzwald energy gmbh</option>
+                          <option>se sauber energie gmbh & co. kg</option>
+                          <option>simplygreen - eine marke der entega energie gmbh</option>
+                          <option>spatzle strom - ein marke der ehinger energie stromvertrieb gmbh & co.kg</option>
+                          <option>stadtische werke ag kassel</option>
+                          <option>stadtwerke ahrensburg gmbh</option>
+                          <option>stadtwerke barmstedt vertrieb gmbh</option>
+                          <option>stadtwerke bochum gmbh </option>
+                          <option>stadtwerke dusseldorf ag </option>
+                          <option>stadtwerke energie verbund sev gmbh</option>
+                          <option>stadtwerke fellbach gmbh</option>
+                          <option>stadtwerke flesburg gmbh</option>
+                          <option>stadtwerke frankfurt(oder) gmbh</option>
+                          <option>stadtwerke geesthacht gmbh</option>
+                          <option>stadtwerke hamm gmbh</option>
+                          <option>stadtwerke hattingen gmbh</option>
+                          <option>stadtwerke heidenheim ag</option>
+                          <option>stadtwerke kiel ag</option>
+                          <option>stadtwerke leipzig gmbh</option>
+                          <option>stadtwerke neuwied gmbh</option>
+                          <option>stadtwerke olching gmbh</option>
+                          <option>stadtwerke rostock ag</option>
+                          <option>stadtwerke rothenburg o.d.t. gmbh</option>
+                          <option>stadtwerke schwerin gmbh</option>
+                          <option>stadtwerke suhl/zella-mehlis gmbh</option>
+                          <option>stadtwerke tubingen gmbh</option>
+                          <option>stadtwerke ulzen gmbh</option>
+                          <option>stadtwerke wedel gmbh</option>
+                          <option>stadtwerke winsen (luhe) gmbh</option>
+                          <option>stiebel eltron umweltstromplus - in kooperation mit der digital energy solution gmbh & co. kg</option>
+                          <option>strasserauf - eine marke der energieversorgung oberhausen ag</option>
+                          <option>strogon gmbh</option>
+                          <option>strom.manufaktur - eine marke der drewag - stadtwerke dresden gmbh</option>
+                          <option>stromio gmbh</option>
+                          <option>stromversorgung angermunde gmbh</option>
+                          <option>susienergie gmbh</option>
+                          <option>suwag vertrieb ag & co. kg</option>
+                          <option>svo vertrieb gmbh</option>
+                          <option>swb energie- und wasserversorgung Bonn/rhein-sieg gmbh</option>
+                          <option>swe energie gmbh</option>
+                          <option>switch energievertriebsgesellschaft m.b.h</option>
+                          <option>swk energie gmbh</option>
+                          <option>swm versorgungs gmbh</option>
+                          <option>swn stadtwerke trier versorgungs-gmbh</option>
+                          <option>team energie gmbh & co. kg</option>
+                          <option>thuringer energie ag</option>
+                          <option>ubitricity gesellschaft fur verteilte energiesysteme mbh</option>
+                          <option>vereinigte stadtwerke gmbh</option>
+                          <option>vivi-power gmbh</option>
+                          <option>voltera - eine marke der energy2day gmbh</option>
+                          <option>voxenergie gmbh</option>
+                          <option>VWS Verbundwerke sudwestsachsen gmbh</option>
+                          <option>WEMAG AG</option>
+                          <option>Westfalen AG</option>
+                          <option>Wir Energie  eine Marke der energiehaus dresden eg</option>
+                          <option>wsw energie & wasser ag</option>
+                          <option>yello strom gmbh</option>
                       </select>
                     </div>
                   </div>
