--- a/index.html
+++ b/index.html
@@ -161,44 +161,33 @@
                       <div class="row">
                        <div class="col-md-6">
                             <div class="form-group">
-                              <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
-                              <div class="col-sm-8">
-                                <input type="email" class="form-control" id="email" placeholder="Enter email">
-                              </div>
-                            </div>
-                            <div class="form-group">
                               <label class="control-label col-sm-4" for="pwd">Wohnungsgröße :</label>
                               <div class="col-sm-8">          
                                 <select name="dropdown2" id="dropdown2">
-                                   <option value="18000">50 m2</option>
-                                    <option value="12000">100 m2</option>
+                                    <option value="5000">50 m2</option>
+                                    <option value="12000">100 m2 </option>
                                     <option value="18000">150 m2</option>
                                     <option value="35000">280 m2</option>
                                 </select>
                               </div>
                             </div>
+                            <div class="form-group">
+                              <label class="control-label col-sm-5" for="email">Verbrauch:</label>
+                              <div class="col-sm-7">
+                               <input type="text" name="receiver2" id="receiver2" value="" placeholder="5000" />
+                              </div>
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                              <label class="control-label col-sm-5" for="email">Personen im Haushalt:</label>
-                              <div class="col-sm-7">
-                               <input type="text" name="receiver2" id="receiver2" value="" placeholder="2000" />
+                              <label class="control-label col-sm-4" for="email">Postleitzahl :</label>
+                              <div class="col-sm-8">
+                                <input type="email" class="form-control" id="email" placeholder="">
                               </div>
                             </div>
-                            <!--<div class="form-group">
-                              <label class="control-label col-sm-4" for="pwd">Zahlungsweise:</label>
-                              <div class="col-sm-8">          
-                                <select>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                    <option>Monatlich</option>
-                                </select>
-                              </div>
-                            </div>-->
                         </div>
                         </div>
-                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="gasview.html" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
                 </div>
                 <div id="menu2" class="tab-pane fade">
@@ -216,7 +205,7 @@
                             </div>
                           <div class="col-md-3"></div>
                         </div>
-                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="kfz.html" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
                 </div>
                 <div id="menu3" class="tab-pane fade">
@@ -242,7 +231,7 @@
                             </div>
                           <div class="col-md-3"></div>
                         </div>
-                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="" class="button" type="button">Jetzt vergleichen</a></p>
                       </form>
                 </div>
                 <div id="menu4" class="tab-pane fade">
